@@ -1374,11 +1374,11 @@ __prepdoc() {
 	local -i n=1;
 	local pkg_hint;
 	local default_docs="\
-		ABOUT-NLS ANNOUNCE ANNOUNCEMENTS AUTHOR AUTHORS \
+		ANNOUNCE ANNOUNCEMENTS AUTHOR AUTHORS \
 		BUG-REPORTS BUGS \
 		Changes ChangeLog CONTRIBUTORS COPYING COPYING-DOCS COPYING.LIB COPYRIGHT CREDITS \
-		FAQ GPL HACKING HISTORY HOW-TO-CONTRIBUTE INSTALL KNOWNBUG \
-		LEGAL LICENCE LICENSE MAINTAINERS NEWS NLS NOTES \
+		FAQ GPL HACKING HISTORY HOW-TO-CONTRIBUTE KNOWNBUG \
+		LEGAL LICENCE LICENSE MAINTAINERS NEWS NOTES \
 		PROGLIST README THANKS TODO WHATSNEW";
 
 	cd ${S};
