@@ -1,5 +1,7 @@
 2008-Aug-24  yselkowitz
 
+	* bin/cygport.in (__prepdoc): Don't default install ABOUT-NLS or INSTALL.
+
 	* lib/berkdb.cygclass: Disable building of Java bindings.
 
 	* lib/mono.cygclass: Remove MAKEOPTS override.
